--- a/about.html
+++ b/about.html
@@ -30,6 +30,10 @@
             <div class="about-me-text">
                 <p>Hello! My name is Charlotte and I am a registered
                 nurse based in Perth, Western Australia.</p>
+                <p>I am also an aspiring developer and am currently completing
+                    a six-month workshop with She Codes.</p>
+                <p>In my spare time I enjoy exercising, reading books, eating
+                    yummy food and traveling as much as possible!</p>
                
                 
             </div>
